<resources>
    <string name="app_name">BlogApplication</string>
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="nav_header_user_profile_login">UserLogin</string>
    <string name="nav_header_user_profile_status">UserStatus</string>
    <string name="nav_header_desc">BlogAppIcon</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_video">Videos</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_forum">Forum</string>
    <string name="nav_item_categories_group">Categories</string>
    <string name="nav_item_category_common">Common</string>
    <string name="nav_item_category_developing">Developing</string>
    <string name="nav_item_category_cooking">Cooking</string>
    <string name="heading">Movies</string>
    <string name="author_id">Author</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="home_image">HomeImage</string>
    <string name="blog_list_image">BlogListImage</string>
    <string name="retry">Retry</string>
    <string name="data_loading_error">An error occurred while loading data</string>
    <string name="blog_post_title">BlogPostTitle</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="blog_post_content">Content</string>
    <string name="content_of_blogpost">Content of BlogPost</string>
    <string name="video_item_description">Description of video item</string>
    <string name="video_item_title">Video item title</string>
    <string name="loading_process">Loading...</string>
    <string name="answer">ANSWER</string>
    <string name="answer_low">answer</string>
    <string name="forum_heading">Forum about movies</string>
    <string name="answer_input_dialog_title">Your answer:</string>
</resources>
