<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <data>
        <variable
            name="userProfileViewModel"
            type="kz.mircella.blogapplication.userprofile.UserProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/nav_header_user_profile_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/nav_header_desc"
            android:saveEnabled="true"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/nav_header_user_profile_login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/nav_header_user_profile_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:mutableText="@{userProfileViewModel.getUserProfileLogin()}"
            app:layout_constraintBottom_toTopOf="@+id/nav_header_user_profile_status_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_header_user_profile_iv" />

        <TextView
            android:id="@+id/nav_header_user_profile_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nav_header_user_profile_status"
            app:mutableText="@{userProfileViewModel.getUserProfileStatus()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>