<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kz.mircella.blogapplication.blogpost.BlogPostListItemViewModel"/>
    </data>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/blog_list_fragment_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="@{()->viewModel.onBlogPostListItemClick()}"
        card_view:cardCornerRadius="@dimen/ten_dp_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/blog_list_fragment_cv_iv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/ten_dp_margin"
                android:contentDescription="@string/blog_list_image"
                android:src="@drawable/avatar_poster"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25"
                app:imageUrl="@{viewModel.imageUrl}"
                />

            <TextView
                android:id="@+id/blog_list_fragment_cv_heading_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five_dp_margin"
                android:text="@string/heading"
                android:textAlignment="center"
                android:textSize="@dimen/title_size"
                app:mutableText="@{viewModel.getBlogPostTitle()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blog_list_fragment_cv_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blog_list_fragment_cv_author_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp_margin"
                android:layout_marginRight="@dimen/five_dp_margin"
                android:layout_marginBottom="@dimen/five_dp_margin"
                android:text="@string/author_id"
                android:textSize="@dimen/subtitle_size"
                app:mutableText="@{viewModel.getBlogPostAuthor()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/blog_list_fragment_cv_date_tv"
                app:layout_constraintStart_toEndOf="@+id/blog_list_fragment_cv_iv"
                app:layout_constraintTop_toBottomOf="@+id/blog_list_fragment_cv_heading_tv" />

            <TextView
                android:id="@+id/blog_list_fragment_cv_date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp_margin"
                android:layout_marginRight="@dimen/five_dp_margin"
                android:layout_marginBottom="@dimen/five_dp_margin"
                android:text="@string/date"
                android:textSize="@dimen/subtitle_size"
                app:mutableText="@{viewModel.getBlogPostDate()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/blog_list_fragment_cv_author_tv"
                app:layout_constraintTop_toBottomOf="@+id/blog_list_fragment_cv_heading_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>