<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:orientation="vertical">

    <data>

        <variable
            name="viewModel"
            type="kz.mircella.blogapplication.video.VideoItemViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.marcinmoskala.videoplayview.VideoPlayView
            android:id="@+id/video_item_video_player"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:videoUri="@{viewModel.getVideoUrl()}"
            app:videoImageUrl="@{viewModel.getVideoImageUrl()}"
            app:playButton="@drawable/play_button"
            app:layout_constraintBottom_toTopOf="@id/video_item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/video_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/video_item_title"
            android:textAlignment="center"
            android:textSize="@dimen/title_size"
            app:layout_constraintBottom_toTopOf="@id/video_item_metadata"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_item_video_player"
            app:mutableText="@{viewModel.getTitle()}" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/video_item_metadata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/video_item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/video_item_description">
            <TextView
                android:id="@+id/video_item_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/author_id"
                android:textAlignment="center"
                android:textSize="@dimen/subtitle_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/video_item_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5"
                app:mutableText="@{viewModel.getAuthorId()}" />

            <TextView
                android:id="@+id/video_item_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="@dimen/subtitle_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/video_item_author"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintWidth_percent="0.5"
                app:mutableText="@{viewModel.getDate()}" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <EditText
            android:id="@+id/video_item_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:ems="10"
            android:editable="false"
            android:singleLine="false"
            android:gravity="start|top"
            android:inputType="none"
            android:textIsSelectable="false"
            android:labelFor="@id/blog_post_title"
            android:text="@string/video_item_description"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_item_metadata"
            app:mutableText="@{viewModel.getDescription()}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>